List all code snippet and select to view the content

--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "commander": "^11.0.0",
+    "terminal-kit": "^3.0.0",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
-    "@types/node": "^20.5.9"
+    "@types/node": "^20.5.9",
+    "@types/terminal-kit": "^2.5.1"
   }
 }
