--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Yogesh Ananda Nikam",
   "license": "ISC",
   "dependencies": {
+    "clipboardy": "^3.0.0",
     "commander": "^11.0.0",
     "terminal-kit": "^3.0.0",
     "typescript": "^5.2.2"
