--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
     "skipLibCheck": true,
     "outDir": "./dist",
     "types": [
-      "node"
+      "node",
+      "jest"
     ]
   },
   "exclude": [
