--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "start": "tsc && node --es-module-specifier-resolution=node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "type": "module",
   "author": "Yogesh Ananda Nikam",
@@ -17,7 +17,10 @@
     "typescript": "^5.2.2"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.4",
     "@types/node": "^20.5.9",
-    "@types/terminal-kit": "^2.5.1"
+    "@types/terminal-kit": "^2.5.1",
+    "jest": "^29.6.4",
+    "ts-jest": "^29.1.1"
   }
 }
