Add search and copy, edit, delete, view functionality through SC, SE, SD and SV flags

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
     "outDir": "./dist",
     "types": [
       "node",
-      "jest"
+      "jest",
+      "bun-types"
     ]
   },
   "exclude": [
