--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/jest": "^29.5.4",
     "@types/node": "^20.5.9",
     "@types/terminal-kit": "^2.5.1",
+    "bun-types": "^1.0.2",
     "jest": "^29.6.4",
     "ts-jest": "^29.1.1"
   }
